apps/backend-test-app/resources/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-test-app-service
spec:
  type: ClusterIP
  selector:
    app: backend-test-app
  ports:
  - name: http
    protocol: TCP
    port: 80                                      
    targetPort: 8080
