apps/backend-test-app/resources/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-test-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: changeme
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/security-groups: changeme
    alb.ingress.kubernetes.io/subnets: changeme
    alb.ingress.kubernetes.io/load-balancer-name: changeme
    alb.ingress.kubernetes.io/load-balancer-attributes: changeme
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /service/healthy
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/group.name: changeme
  labels:
    app: backend-test-app-ingress
spec:
  ingressClassName: alb
  rules:
    - host: changeme
      http:
        paths:
        - path: changeme
          pathType: Pefix
          backend:
            service:
              name: changeme
              port:
                number: changeme
